--- a/Elderly_Care/bin/src/main/resources/templates/fragments/footer.html
+++ b/Elderly_Care/bin/src/main/resources/templates/fragments/footer.html
@@ -3,7 +3,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <div class="footer" th:fragment="footer">
-	<div class="ft py-4">
+	<!-- <div class="ft py-4"> -->
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-lg-4 text-lg-start">2024 Elderly Care WebSite</div>
@@ -22,6 +22,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	<!-- </div> -->
 </div>
 </html>
