--- a/Elderly_Care/bin/src/main/resources/templates/layouts/userLayout.html
+++ b/Elderly_Care/bin/src/main/resources/templates/layouts/userLayout.html
@@ -3,6 +3,8 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="UTF-8">
+<meta name="_csrf" th:content="${_csrf.token}"/>
+<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 <title>Document</title>
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -12,12 +14,13 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 	crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
 	href="https://fonts.googleapis.com/css2?family=Jua&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lilita+One&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
 	rel="stylesheet">
-<link th:href="@{/css/layout1.css}" rel="stylesheet">
+<link th:href="@{/css/userLayout.css}" rel="stylesheet">
 
 <th:block layout:fragment="script"></th:block>
 <th:block layout:fragment="css"></th:block>
